[gd_scene load_steps=11 format=2]

[ext_resource path="res://rafters.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://slash.wav" type="AudioStream" id=3]
[ext_resource path="res://deflate_player.wav" type="AudioStream" id=4]
[ext_resource path="res://slash.png" type="Texture" id=5]
[ext_resource path="res://Splash.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 4 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 10, 10, 16, 4, 8, 4, 1, 11, 1, 12, 5, 12 )

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Needle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 11
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Needle" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Needle"]
position = Vector2( 11.5, -1 )
rotation = -0.523599
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Needle"]
position = Vector2( 12.5, -6.28062 )
rotation = -0.523599
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Needle"]
position = Vector2( 1.71046, 0 )
rotation = -0.523599
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slash = SubResource( 4 )

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
bus = "SFX"

[node name="DeflateSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "SFX"

[node name="DieTimer" type="Timer" parent="."]
one_shot = true

[node name="Splash" parent="." instance=ExtResource( 6 )]
